# cmake_so_to_android

./: README.md  errorlog
MyApplication/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
MyApplication/app/src/androidTest/java/com/jin/android/myapplication/: ExampleInstrumentedTest.java
MyApplication/app/src/main/: AndroidManifest.xml
MyApplication/app/src/main/cpp/: native-lib.cpp
MyApplication/app/src/main/java/com/jin/android/myapplication/: MainActivity.java
MyApplication/app/src/main/res/layout/: activity_main.xml
MyApplication/app/src/test/java/com/jin/android/myapplication/: ExampleUnitTest.java
MyApplication/myapplication2/: build.gradle  proguard-rules.pro
MyApplication/myapplication2/src/main/: AndroidManifest.xml
MyApplication/myapplication2/src/main/java/com/example/myapplication/: MainActivity.java  NFCReaderHelper.java
MyApplication/myapplication2/src/main/res/layout/: activity_main.xml
cmake/: CMakeLists.txt  android.toolchain.cmake
cmake/lib/: CMakeLists.txt  hello.cpp  hello.h
